--- a/TOC/giga/summer_19_01/esp.html
+++ b/TOC/giga/summer_19_01/esp.html
@@ -99,8 +99,7 @@
 
 	</div><!-- end .contents -->
 	<div id="footer">
-		<div class="cooyactxt" style="font-weight: 300">traducción:</div>
-		<div class="cooyactxt" style="font-weight: 300"><a href="https://twitter.com/MarcosMT0">Marcos</a></div>
+		<div class="cooyactxt" style="font-weight: 300">traducción: <a href="https://twitter.com/MarcosMT0">Marcos</a></div>
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
 	</div><!-- end .footer -->
 </div><!-- end .container -->
