--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -105,10 +105,10 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|*260748(5)|-------|-------|-------|-------┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
-<br>*2|**70467(5)|-------|-------|-------|-------┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
-<br>*3|**68740(5)|-------|-------|-------|-------┃*,*68,740(**5)┃2019/09/04|Dr&#46;Stone&nbsp;12
-<br>*4|**66245(5)|-------|-------|-------|-------┃*,*66,245(**5)┃2019/09/04|Act&#8211;Age&nbsp;8		
+<br>*1|*260748(5)|*356785|-------|-------|-------┃*,260,748(*12)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
+<br>*2|**70467(5)|**93975|-------|-------|-------┃*,*70,467(*12)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>*3|**68740(5)|**93266|-------|-------|-------┃*,*68,740(*12)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>*4|**66245(5)|**92650|-------|-------|-------┃*,*66,245(*12)┃2019/09/04|Act&#8211;Age&nbsp;7		
 </span>
 
 <h1 id="ongoing" style="padding-top:30px">Ongoing series (will be added periodically)</h1>
@@ -222,7 +222,7 @@
 <br>|369191(7)|464621|507475|535329|------┃*,619,239(105)┃2019/02/04|Haikyuu&#33;&#33;&nbsp;36
 <br>|313860(4)|443078|492017|516488|------┃*,550,443(*46)┃2019/04/04|Haikyuu&#33;&#33;&nbsp;37
 <br>|325332(6)|------|------|------|------┃*,325,332(**6)┃2019/06/04|Haikyuu&#33;&#33;&nbsp;38
-<br>|260748(5)|------|------|------|------┃*,260,748(**5)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39	
+<br>|260748(5)|356785|------|------|------┃*,260,748(*12)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 <br>
 <br>|******(2)|------|------|------|------┃*,***,***(**2)┃2014/01/04|Haikyuu&#33;&#33;&nbsp;9&nbsp;LE&nbsp;&#43;&nbsp;Drama&nbsp;CD&nbsp;&lt;24,742
 <br>|108722(5)|------|------|------|------┃*,108,722(**5)┃2015/03/04|Haikyuu&#33;&#33;&nbsp;15&nbsp;LE&nbsp;&#43;&nbsp;OVA
@@ -327,23 +327,23 @@
 <p></p>
 <span>
 |Week&nbsp;1(F)|Week&nbsp;2|Week&nbsp;3|Week&nbsp;4|Week&nbsp;5┃OriconLTD (DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>|******(3)|------|------|------|------┃*,563,713(1193)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1&lt;16,966
-<br>|*16323(4)|------|------|------|------┃*,540,472(1131)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
-<br>|*25967(6)|------|------|------|------┃*,529,863(1070)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
-<br>|*21815(3)|------|------|------|------┃*,521,744(1011)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
-<br>|*41476(3)|*65822|------|------|------┃*,522,599(*920)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
-<br>|*65937(6)|*84742|------|------|------┃*,525,038(*860)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
-<br>|*57083(3)|*96527|------|------|------┃*,506,755(*766)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
-<br>|*81312(5)|109936|122681|------|------┃*,503,503(*705)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
-<br>|*89077(7)|110729|******|130267|------┃*,494,207(*644)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
-<br>|*65861(3)|118511|133976|------|------┃*,492,382(*556)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
-<br>|113325(7)|135313|******|153976|------┃*,493,773(*462)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
-<br>|*64061(3)|118990|138412|------|------┃*,486,125(*402)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
-<br>|*74425(3)|129051|146318|------|------┃*,481,006(*311)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
-<br>|*78819(3)|126981|145143|******|160110┃*,466,847(*248)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
-<br>|107041(4)|159717|183206|198458|214609┃*,472,585(*158)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
-<br>|225102(4)|302423|337978|357346|384400┃*,471,605(**67)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
-<br>|*51963(4)|******|******|******|119215┃*,207,533(**66)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
+<br>|******(3)|------|------|------|------┃*,589,928(1200)┃2016/06/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;1&lt;16,966
+<br>|*16323(4)|------|------|------|------┃*,565,675(1138)┃2016/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;2
+<br>|*25967(6)|------|------|------|------┃*,554,393(1077)┃2016/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;3
+<br>|*21815(3)|------|------|------|------┃*,545,188(1018)┃2016/12/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;4
+<br>|*41476(3)|*65822|------|------|------┃*,545,853(*927)┃2017/03/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;5
+<br>|*65937(6)|*84742|------|------|------┃*,551,156(*867)┃2017/05/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;6
+<br>|*57083(3)|*96527|------|------|------┃*,534,742(*773)┃2017/08/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;7
+<br>|*81312(5)|109936|122681|------|------┃*,531,389(*712)┃2017/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;8
+<br>|*89077(7)|110729|******|130267|------┃*,521,339(*651)┃2017/12/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;9
+<br>|*65861(3)|118511|133976|------|------┃*,519,168(*563)┃2018/03/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;10
+<br>|113325(7)|135313|******|153976|------┃*,520,554(*469)┃2018/06/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;11
+<br>|*64061(3)|118990|138412|------|------┃*,512,468(*409)┃2018/08/03|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;12
+<br>|*74425(3)|129051|146318|------|------┃*,507,121(*318)┃2018/11/02|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;13
+<br>|*78819(3)|126981|145143|******|160110┃*,493,201(*255)┃2019/01/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;14
+<br>|107041(4)|159717|183206|198458|214609┃*,499,523(*165)┃2019/04/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;15
+<br>|225102(4)|302423|337978|357346|384400┃*,511,424(**74)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>|*51963(4)|******|******|******|119215┃*,222,175(**74)┃2019/07/05|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;Official&nbsp;Fanbook&nbsp;Demon&nbsp;Coprse&nbsp;Records
 
 </span>	
 		  <p></p>
@@ -386,7 +386,7 @@
 <br>|*74913(7)|*93561|******|106921|------┃*,106,921(*28)┃2019/02/04|We&nbsp;Never&nbsp;Learn&nbsp;10
 <br>|*63097(4)|*91845|104444|------|------┃*,104,444(*18)┃2019/04/04|We&nbsp;Never&nbsp;Learn&nbsp;11
 <br>|*76366(6)|*99474|110940|117998|------┃*,117,998(*27)┃2019/06/04|We&nbsp;Never&nbsp;Learn&nbsp;12
-<br>|*70467(5)|------|------|------|------┃*,*70,467(**5)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
+<br>|*70467(5)|*93975|------|------|------┃*,*70,467(*12)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 </span>	
 		  <p></p>
 <strong id="ds" style="padding-top:50px">Dr.Stone</strong>
@@ -404,7 +404,7 @@
 <br>|*60550(7)|*77121|******|*91300|------┃*,*91,300(*28)┃2019/02/04|Dr&#46;Stone&nbsp;9
 <br>|*49856(4)|*73893|------|------|------┃*,*73,893(*11)┃2019/04/04|Dr&#46;Stone&nbsp;10
 <br>|*56414(4)|*81274|*92654|******|106828┃*,106,828(*32)┃2019/07/04|Dr&#46;Stone&nbsp;11
-<br>|*68740(5)|------|------|------|------┃*,*68,740(**5)┃2019/09/04|Dr&#46;Stone&nbsp;12
+<br>|*68740(5)|*93266|------|------|------┃*,*68,740(*12)┃2019/09/04|Dr&#46;Stone&nbsp;12
 </span>	
 		  <p></p>
 <strong id="aa" style="padding-top:50px">Act-Age</strong>
@@ -418,7 +418,7 @@
 <br>|*52319(7)|*68191|******|*82040|------┃*,*82,040(*28)┃2019/02/04|Act&#8211;Age&nbsp;5
 <br>|*54353(4)|*80820|*92715|101233|------┃*,101,233(*25)┃2019/05/02|Act&#8211;Age&nbsp;6
 <br>|*61834(4)|*89891|102933|******|117666┃*,117,666(*32)┃2019/07/04|Act&#8211;Age&nbsp;7
-<br>|*66245(5)|------|------|------|------┃*,*66,245(**5)┃2019/09/04|Act&#8211;Age&nbsp;8
+<br>|*66245(5)|*92650|------|------|------┃*,*66,245(*12)┃2019/09/04|Act&#8211;Age&nbsp;7
 </span>	
 		 <p></p>
 <strong id="jjk" style="padding-top:50px">Jujutsu Kaisen</strong>
