--- a/TOC/19_46/index.html
+++ b/TOC/19_46/index.html
@@ -14,11 +14,11 @@
 <meta charset="UTF-8">
 <title>Table of contents</title>
 <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
-<meta property="og:title" content="Weekly Shonen Jump #44 2019">	
+<meta property="og:title" content="Weekly Shonen Jump #46 2019">	
 <meta property="og:description" content="Table of contents &amp; Author Comments">
 <meta name="Keywords" content="Table of contents, TOC, Author comments, Shonen Jump, Shounen Jump">
-<meta property="og:image" content="https://manganimy.github.io/TOC/19_44/img/top.jpg">
-<meta property="og:url" content="https://manganimy.github.io/TOC/19_44">
+<meta property="og:image" content="https://manganimy.github.io/TOC/19_46/img/top.jpg">
+<meta property="og:url" content="https://manganimy.github.io/TOC/19_46">
 <meta name="twitter:card" content="summary_large_image">
 
 <link rel="stylesheet" href="css/reset.css">
@@ -50,9 +50,9 @@
     </div>
   </div>
   <div id="nav-center">
-	  <a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
-	  <a><button class="dropbtn">#44</button></a>
- 	  <a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
+	  <a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/prev2.png"></a>
+	  <a><button class="dropbtn">#46</button></a>
+ 	  <a href="#"><img src="https://manganimy.github.io/TOC/img/next2.png"></a>
   </div>
   <div class="lang">
   <div class="dropdown">
@@ -71,25 +71,48 @@
 		<h1><img src="img/top.jpg" alt=""></h1>
 		<div class="txt_read"><span>This week's weekly ShonenJump posting order &amp; comments from the author.</span></div>
 <div id="grid-container">
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_43/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
+  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/prev1.png" alt=""></a></div></div>
   <div class="grid-item"><div class="img_wj"><img src="img/img_wj.jpg" alt=""></div></div>
-  <div class="grid-item"><div class="img_nav"><a href="https://manganimy.github.io/TOC/19_45/"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
+  <div class="grid-item"><div class="img_nav"><a href="#"><img src="https://manganimy.github.io/TOC/img/next1.png" alt=""></a></div></div>  
 </div>
 	</div><!-- end .header -->
 
 	<div class="contents">
-		
-		<!-- Demon Slayer: Kimetsu no Yaiba -->
+		<!-- My Hero Academia -->
 		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100020">One Piece <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
-				<div class="l_side"><img src="img/img_oda.png" alt=""></div>
+				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
 				<div class="r_side">
-					<p class="author">Eiichiro Oda</p>
-					The Bachelor Japan season 3 started, so I have another thing to look forward to after I finish my chapters. I like the grape girl.
+					<p class="author">Kohei Horikoshi</p>
+					The anime is starting again! I’m so happy! I’m so blessed!
 				</div>
 			</div>
 		</div>
+		
+		<!-- Demon Slayer: Kimetsu no Yaiba -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100009">Demon Slayer: Kimetsu no Yaiba <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Koyoharu Gotouge</p>
+					The anime’s quality was amazing to the very end! I’m so thankful to everyone involved!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Haikyuu -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Haruichi Furudate</p>
+					Sorry, I’ll be taking another break next week. Please stick with me just a little longer after that. 
+				</div>
+			</div>
+		</div>	
 		
 		<!-- Dr. STONE -->
 		<div class="comment_area">
@@ -98,31 +121,7 @@
 				<div class="l_side"><img src="img/img_inagaki.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Riichiro Inagaki</p>
-					What Gen used can also be called the Caligula Effect. Basically, humans can be very contrary.
-				</div>
-			</div>
-		</div>
-		
-		<!-- One Piece -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100009">Demon Slayer: Kimetsu no Yaiba <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gotouge.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Koyoharu Gotouge</p>
-					The spiciness of Wasabeef chips isn’t so much spicy as it is explosive for your nasal cavity.
-				</div>
-			</div>
-		</div>
-		
-		<!-- The Promised Neverland -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kaiu Shirai</p>
-					Thanks to everyone who participated in The Promised Neverland’s anime being shown in movie theaters. I wish I could have gone! 
+					It turns out that not falling while riding a bike isn’t just thanks to the gyro effect. The handlebars are important too.
 				</div>
 			</div>
 		</div>
@@ -134,7 +133,41 @@
 				<div class="l_side"><img src="img/img_tabata.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Y&umacr;ki Tabata</p>
-					Tamura Sensei zipped by on his bike to deliver gifts to celebrate the birth of our baby. He was like the wind!
+					The Black Clover anime is entering its third year! Thank you to everyone! I’m so blessed!				</div>
+			</div>
+		</div>
+		
+		<!-- Jujutsu Kaisen-->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_akutami.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Gege Akutami</p>
+					I’ve been wanting to make LINE stamps. I had so much fun. Enjoy!
+				</div>
+			</div>
+		</div>
+		
+		<!-- Yozakura -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Hitsuji Gondaira</p>
+					If God appeared before me, I think I’d make the same wish as Doburock in their comedy skit. Please give me a giant…
+				</div>
+			</div>
+		</div>		
+		<!-- The Promised Neverland -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100026">The Promised Neverland <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_shirai.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kaiu Shirai</p>
+					I never thought I’d feel this way. I really want to hang down from a wall bar. I want to stretch out.
 				</div>
 			</div>
 		</div>
@@ -146,83 +179,108 @@
 				<div class="l_side"><img src="img/img_tsutsui.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Taishi Tsutsui</p>
-					Study’s live performance was amazing! Thank you so much! Look forward to season 2 of the anime!
+					Season 2 of the anime is finally starting!! Yay!! Please check it out!
 				</div>
 			</div>
 		</div>
 		
-		<!-- Jujutsu Kaisen -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100017">My Hero Academia <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_horikoshi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kohei Horikoshi</p>
-					My friend Peppe Sensei has a new series in Spirits magazine, and he’s on Terrace House! Amazing!
-				</div>
-			</div>
-		</div>
-		
-		<!-- Mission: Yozakura Family -->
+		<!-- Mitama -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100069">Mitama Secureity: Spirit Busters <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_hatomune.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tsurun Hatomune</p>
-					My editor and I recently started having our weekly meetings in a Torikizoku restaurant, and it feels totally natural.
+					My home and work studio is the same place. A zero-minute commute! I wake up and I’m at work! It’s great!! I want to go far away!
 				</div>
 			</div>
 		</div>
 		
-		<!-- Haikyu!! -->
+		<!-- chainsaw -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100037">Chainsaw Man <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_fujimoto.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Tatsuki Fujimoto</p>
-					The new volume of Delicious in Dungeon was great!
+					There’s something called cheese tea which I would like to try someday.
 				</div>
 			</div>
 		</div>
 		
-		<!-- Mitama Security: Spirit Busters -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100014">Haikyu!! <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_furudate.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Haruichi Furudate</p>
-					This week was the first time ever that I wanted to draw manga more than eat food. I merely thought about it, though. I still ate food. 
-				</div>
-			</div>
-		</div>
+
+
 		
-		<!-- ACT-AGE -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100068">Mission: Yozakura Family <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_gondaira.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Hitsuji Gondaira</p>
-					I’m happy it’s cooled down after a hot stretch. Every year I catch a cold from the lingering summer heat, but I was okay this year.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Chainsaw Man -->
+		<!-- actage -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100036">ACT-AGE <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
 			<div class="detail_area">
 				<div class="l_side"><img src="img/img_usazaki.png" alt=""></div>
 				<div class="r_side">
 					<p class="author">Shiro Usazaki</p>
-					I like the nuggets from Pizza Hut. The cheese pizza is really good too.
+					My iPhone fingerprint reader isn’t working as well as it used to. I probably no longer have fingerprints.
 				</div>
 			</div>
 		</div>
 		
+		<!-- yui -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Hiroshi Shiibashi</p>
+					I watched the TV drama Natsuzora until the end. I enjoyed talking about who each person is based on.
+				</div>
+			</div>
+		</div>
+		
+		<!-- samurai 8 -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Masashi Kishimoto</p>
+					I went to the bookstore and bought some books. But I don’t actually have time to read them… Crummy.
+				</div>
+			</div>
+		</div>
+	
+		<!-- Double Taisei -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kentaro Fukuda</p>
+					I often order Chinese delivery. Pepper steak is by far the best.
+				</div>
+			</div>
+		</div>
+		<!-- Beast Children -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kento Terasaka</p>
+					Japan beat Ireland! I hope they can keep it up! Go, Japan!
+				</div>
+			</div>
+		</div>
+		<!-- tokyo -->
+		<div class="comment_area">
+			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
+			<div class="detail_area">
+				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
+				<div class="r_side">
+					<p class="author">Kento Matsuura</p>
+					The gum my assistant bought has three different spice levels. I’ve been secretly only having the sweetest one.
+				</div>
+			</div>	
+			
+			
 		<!-- Samurai 8: The Tale of Hachimaru -->
 		<div class="comment_area">
 			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100034">Jujutsu Kaisen <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
@@ -234,66 +292,7 @@
 				</div>
 			</div>
 		</div>
-		
-		<!-- Yui Kamio Lets Loose -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100059">Samurai 8: The Tale of Hachimaru <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_kishimoto.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Masashi Kishimoto</p>
-					I hit the shin of my right leg really hard. So painful. I’ve been having a lot of leg issues lately… Sniff sniff.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Double Taisei -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100060">Double Taisei<span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_fukuda.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kentaro Fukuda</p>
-					The sound of rain from inside of a car with the engine shut off really comforts me and I love it. Does anyone agree?
-				</div>
-			</div>
-		</div>
-		
-		<!-- Tokyo Shinobi Squad -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100055">Yui Kamio Lets Loose <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_shiibashi.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Hiroshi Shiibashi</p>
-					I bought an espresso machine. It takes a little effort, but that’s what makes it fun, so I keep drinking more.
-				</div>
-			</div>
-		</div>
-		
-		<!-- Beast Children -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100061">Beast Children <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_terasaka.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Terasaka</p>
-					I’ve been playing Detroit: Become Human a little bit at a time after work. I want to know what happens, but then I have to wait…
-				</div>
-			</div>
-		</div>
-		
-	</div><!-- end .contents -->
-	<!-- Beast Children -->
-		<div class="comment_area">
-			<h2><a href="https://mangaplus.shueisha.co.jp/#/titles/100062">Tokyo Shinobi Squad <span class="arrow"><img src="img/link_arrow.png" alt=""></span></a></h2>
-			<div class="detail_area">
-				<div class="l_side"><img src="img/img_matsuura.png" alt=""></div>
-				<div class="r_side">
-					<p class="author">Kento Matsuura</p>
-					I got cookies as a gift, but I’m more excited about getting the fancy decorated can than the actual cookies!
-				</div>
-			</div>	
+			
 	</div><!-- end .contents -->
 	<div id="footer">
 		<div class="cooyactxt">&copy; SHUEISHA Inc. All rights reserved.</div>
