--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -93,12 +93,12 @@
 <p></p>
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title
-<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,148,343(*95)┃2019/07/04|One&nbsp;Piece&nbsp;93
+<br>*1|1378177(4)|1716100|1855702|1923919|1966556┃2,161,345(102)┃2019/07/04|One&nbsp;Piece&nbsp;93
 <br>*2|*498226(4)|*709028|*793638|*838642|*863207┃*,984,493(228)┃2018/10/04|Hunter&nbsp;x&nbsp;Hunter&nbsp;36
-<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,651,875(*95)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
-<br>*4|*190803(3)|*399399|*497864|*544803|*570463┃*,634,240(*66)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
+<br>*3|*225102(4)|*302423|*337978|*357346|*384400┃*,672,569(102)┃2019/07/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;16
+<br>*4|*190803(3)|*399399|*497864|*544803|*570463┃*,642,734(*73)┃2019/08/02|The&nbsp;Promised&nbsp;Neverland&nbsp;15
 <br>*5|*201910(3)|*406721|*496745|*538784|*561135┃*,573,043(*38)┃2019/08/02|My&nbsp;Hero&nbsp;Academia&nbsp;24
-<br>*6|*260748(5)|*356785|*408394|*440330|*456289┃*,456,289(*33)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
+<br>*6|*260748(5)|*356785|*408394|*440330|*456289┃*,463,955(*40)┃2019/09/04|Haikyuu&#33;&#33;&nbsp;39
 <br>*7|*120146(4)|*173597|*195982|*206343|*213502┃*,224,981(*46)┃2019/07/04|Black&nbsp;Clover&nbsp;21
 <br>*8|*113823(6)|*151028|*170148|*178355|-------┃*,198,915(*76)┃2019/06/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;35
 <br>*9|*101826(6)|*137190|*152951|*164005|-------┃*,190,825(*76)┃2019/06/04|Boruto&nbsp;8
@@ -108,7 +108,7 @@
 <br>13|**70467(5)|**93975|*107952|*115604|-------┃*,115,604(*26)┃2019/09/04|We&nbsp;Never&nbsp;Learn&nbsp;13
 <br>14|**29611(3)|**55608|**65124|-------|-------┃*,*65,124(*17)┃2019/08/02|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;17
 <br>15|**25075(3)|**50952|**61532|-------|-------┃*,*61,532(*17)┃2019/08/02|Chainsaw&nbsp;Man&nbsp;3
-<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26	
+<br>16|**19775(4)|-------|-------|-------|-------┃*,*19,775(**4)┃2019/07/04|Hinomaru&nbsp;Sumo&nbsp;26
 </span>
 <p>
 	-
@@ -117,18 +117,18 @@
 <p></p>		  
 <span>
 **|Week&nbsp;1&nbsp;(F)|Week&nbsp;2&nbsp;|Week&nbsp;3&nbsp;|Week&nbsp;4&nbsp;|Week&nbsp;5&nbsp;┃OriconLTD(DIP)┃Pub.&nbsp;Date&nbsp;|Title	
-<br>*1|1182323(3)|-------|-------|-------|-------┃1,182,323(**3)┃2019/10/04|One&nbsp;Piece&nbsp;94
-<br>*2|*368502(3)|-------|-------|-------|-------┃*,368,502(**3)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
-<br>*3|*218380(3)|-------|-------|-------|-------┃*,218,380(**3)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
-<br>*4|**91290(3)|-------|-------|-------|-------┃*,*91,290(**3)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
-<br>*5|**89103(3)|-------|-------|-------|-------┃*,*89,103(**3)┃2019/10/04|Black&nbsp;Clover&nbsp;22
-<br>*6|**88157(3)|-------|-------|-------|-------┃*,*88,157(**3)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
-<br>*7|**65934(3)|-------|-------|-------|-------┃*,*65,934(**3)┃2019/10/04|Boruto&nbsp;9
-<br>*8|**37276(3)|-------|-------|-------|-------┃*,*37,276(**3)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
-<br>*9|**30387(3)|-------|-------|-------|-------┃*,*30,387(**3)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
-<br>10|**15949(3)|-------|-------|-------|-------┃*,*15,949(**3)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
-<br>11|**12728(3)|-------|-------|-------|-------┃*,*12,728(**3)┃2019/10/04|Samurai&nbsp;8&nbsp;1
-<br>12|**11436(3)|-------|-------|-------|-------┃*,*11,436(**3)┃2019/10/04|Samurai&nbsp;8&nbsp;2
+<br>*1|1182323(3)|1531766|-------|-------|-------┃1,531,766(*10)┃2019/10/04|One&nbsp;Piece&nbsp;94
+<br>*2|*368502(3)|*530591|-------|-------|-------┃*,530,591(*10)┃2019/10/04|Kimetsu&nbsp;no&nbsp;Yaiba&nbsp;17
+<br>*3|*218380(3)|*374410|-------|-------|-------┃*,374,410(*10)┃2019/10/04|The&nbsp;Promised&nbsp;Neverland&nbsp;16
+<br>*4|**89103(3)|*148020|-------|-------|-------┃*,148,020(*10)┃2019/10/04|Black&nbsp;Clover&nbsp;22
+<br>*5|**91290(3)|*147807|-------|-------|-------┃*,147,807(*10)┃2019/10/04|Shokugeki&nbsp;no&nbsp;Souma&nbsp;36
+<br>*6|**88157(3)|*138855|-------|-------|-------┃*,138,855(*10)┃2019/10/04|Jujutsu&nbsp;Kaisen&nbsp;7
+<br>*7|**65934(3)|*110114|-------|-------|-------┃*,110,114(*10)┃2019/10/04|Boruto&nbsp;9
+<br>*8|**37276(3)|**61581|-------|-------|-------┃*,*61,581(*10)┃2019/10/04|Chainsaw&nbsp;Man&nbsp;4
+<br>*9|**30387(3)|**50170|-------|-------|-------┃*,*50,170(*10)┃2019/10/04|Yuragi-sou&nbsp;no&nbsp;Yuuna-san&nbsp;18
+<br>10|**15949(3)|**24988|-------|-------|-------┃*,*24,988(*10)┃2019/10/04|Hinomaru&nbsp;Sumo&nbsp;27
+<br>11|**12728(3)|**22984|-------|-------|-------┃*,*22,984(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;1
+<br>12|**11436(3)|**20845|-------|-------|-------┃*,*20,845(*10)┃2019/10/04|Samurai&nbsp;8&nbsp;2
 <br>
 <br>	
 <br>[Not Ranked]
