--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -635,7 +635,7 @@
 <a href="#csm" >&gt;&gt; Chainsaw Man</a>
 <p>Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
-<p style="font-size:.9em;">	
+<p style="font-size:.9em;"> Ongoing series </p>	
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
