--- a/TOC/oricon/index.html
+++ b/TOC/oricon/index.html
@@ -53,7 +53,7 @@
     <div class="dropdown-content"id="myDropdown3" >
       <p style="background:none">Weekly Shonen Jump</p>
       <a href="#latest" >&gt;&gt; Latest Volume Data</a>
-      <p style="background:none; font-size:.9em;"> Ongoing series </p>
+      <p style="background:none; font-size:.9rem;"> Ongoing series </p>
       <a href="#op" >&gt;&gt; One Piece</a>
       <a href="#hxh" >&gt;&gt; Hunter x Hunter</a>
       <a href="#hq" >&gt;&gt; Haikyuu&#33;&#33;</a>
@@ -69,7 +69,7 @@
       <a href="#csm" >&gt;&gt; Chainsaw Man</a>
       <p style="background:none">Jump&#43;</p>
 <a href="#plus" >&gt;&gt; Latest Volume Data</a>
-<p style="background:none; font-size:.9em;"> Ongoing series </p>	    
+<p style="background:none; font-size:.9rem;"> Ongoing series </p>	    
 <a href="#aoflag" >&gt;&gt; Blue Flag</a>
 <a href="#ditf" >&gt;&gt; Darling in the Franxx</a>
 <a href="#jigo" >&gt;&gt; Jigokuraku</a>
